--- a/DouYuZB/DouYuZB/Base.lproj/Mine~.storyboard
+++ b/DouYuZB/DouYuZB/Base.lproj/Mine~.storyboard
@@ -22,7 +22,7 @@
                         <segue destination="T30-19-If6" kind="relationship" relationship="viewControllers" id="13n-7q-cD7"/>
                         <segue destination="zFh-SQ-ZeY" kind="relationship" relationship="viewControllers" id="O21-Ur-aTv"/>
                         <segue destination="RnX-Og-DVu" kind="relationship" relationship="viewControllers" id="CnH-2g-8pf"/>
-                        <segue destination="QE4-Dl-Vyl" kind="relationship" relationship="viewControllers" id="Hga-9p-bHJ"/>
+                        <segue destination="D4u-sX-TcK" kind="relationship" relationship="viewControllers" id="Hga-9p-bHJ"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m2F-Zr-SIE" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -37,7 +37,45 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qeb-rB-IzP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-378" y="-636"/>
+            <point key="canvasLocation" x="-376" y="-655"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="9zp-m9-RBf">
+            <objects>
+                <viewController id="oQ8-Me-Lh9" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ozb-z7-rIe"/>
+                        <viewControllerLayoutGuide type="bottom" id="L2B-2D-GcT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iTI-5U-XxL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="LZV-5r-jtE"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1MV-Du-JTg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="350" y="29"/>
+        </scene>
+        <!--我的-->
+        <scene sceneID="KPL-2X-7uW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="D4u-sX-TcK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="我的" image="tabMine" selectedImage="tabMineHL" id="3Vt-lH-P3t"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4G4-K8-SK5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oQ8-Me-Lh9" kind="relationship" relationship="rootViewController" id="sfO-Nv-GXj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mnJ-vg-0l8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-602" y="30"/>
         </scene>
         <!--Living-->
         <scene sceneID="dbO-WW-hR8">
@@ -47,7 +85,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uPc-ux-G4n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-377" y="-564"/>
+            <point key="canvasLocation" x="-375" y="-592"/>
         </scene>
         <!--Focus-->
         <scene sceneID="moC-zb-nji">
@@ -57,7 +95,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7C2-UW-UaU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-375" y="-482"/>
+            <point key="canvasLocation" x="-375" y="-514"/>
         </scene>
         <!--Discovery-->
         <scene sceneID="fMj-5i-CRg">
@@ -67,17 +105,11 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tme-DB-uja" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-376" y="-399"/>
-        </scene>
-        <!--Mine-->
-        <scene sceneID="kXl-LI-J9z">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Mine" id="QE4-Dl-Vyl" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="zpc-9R-AqQ"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PXe-WO-oak" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-352" y="-318"/>
+            <point key="canvasLocation" x="-376" y="-430"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tabMine" width="24" height="24"/>
+        <image name="tabMineHL" width="24" height="24"/>
+    </resources>
 </document>
