--- a/DouYuZB/DouYuZB/Base.lproj/Main.storyboard
+++ b/DouYuZB/DouYuZB/Base.lproj/Main.storyboard
@@ -4,80 +4,24 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--Main View Controller-->
         <scene sceneID="Lrd-hl-BK2">
             <objects>
-                <tabBarController id="Exd-i4-LfT" sceneMemberID="viewController">
+                <tabBarController id="Exd-i4-LfT" customClass="MainViewController" customModule="DouYuZB" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="iRM-J5-NNX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
-                    <connections>
-                        <segue destination="udH-6u-Ogl" kind="relationship" relationship="viewControllers" id="u9l-QE-4v0"/>
-                        <segue destination="T30-19-If6" kind="relationship" relationship="viewControllers" id="13n-7q-cD7"/>
-                        <segue destination="zFh-SQ-ZeY" kind="relationship" relationship="viewControllers" id="O21-Ur-aTv"/>
-                        <segue destination="RnX-Og-DVu" kind="relationship" relationship="viewControllers" id="CnH-2g-8pf"/>
-                        <segue destination="QE4-Dl-Vyl" kind="relationship" relationship="viewControllers" id="Hga-9p-bHJ"/>
-                    </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m2F-Zr-SIE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1342" y="-429"/>
-        </scene>
-        <!--Home-->
-        <scene sceneID="lh9-KP-Zjn">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Home" id="udH-6u-Ogl" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="htB-6y-Q2u"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qeb-rB-IzP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-378" y="-636"/>
-        </scene>
-        <!--Living-->
-        <scene sceneID="dbO-WW-hR8">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Living" id="T30-19-If6" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="xcJ-cr-mCU"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uPc-ux-G4n" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-377" y="-564"/>
-        </scene>
-        <!--Focus-->
-        <scene sceneID="moC-zb-nji">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Focus" id="zFh-SQ-ZeY" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="vIx-2x-Ake"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7C2-UW-UaU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-375" y="-482"/>
-        </scene>
-        <!--Discovery-->
-        <scene sceneID="fMj-5i-CRg">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Discovery" id="RnX-Og-DVu" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="q3w-4Y-HbN"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tme-DB-uja" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-376" y="-399"/>
-        </scene>
-        <!--Mine-->
-        <scene sceneID="kXl-LI-J9z">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Mine" id="QE4-Dl-Vyl" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="zpc-9R-AqQ"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PXe-WO-oak" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-352" y="-318"/>
         </scene>
     </scenes>
 </document>
